--- a/scripts/config.example.json
+++ b/scripts/config.example.json
@@ -4,7 +4,9 @@
     "api_hash": "PUT_YOUR_API_HASH_HERE",
     "phone_number": "+10000000000",
     "two_step_password": "OPTIONAL_IF_ENABLED",
-    "channels": ["example_channel"],
+    "channels": [
+      "example_channel"
+    ],
     "limit_count": 5000
   },
   "paths": {
